--- a/Design1598/index.html
+++ b/Design1598/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
 
-    <!-- google fonts -->
+    <!-- css file -->
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
