--- a/Design1600/index.html
+++ b/Design1600/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
 
+    <!-- css file -->
+    <link rel="stylesheet" href="styles.css">
+
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +18,7 @@
     <div class="container">
         <h2>Your progress</h2>
         <div class="result">
-            <p class="percent">93%</p>
+            <p>93%</p>
             <div class="text">
                 <p>32 of 42 complete</p>
                 <p>Finish course to get certificate.</p>
